fix height card on mobile

--- a/modules/portfolio/portfolio.module.scss
+++ b/modules/portfolio/portfolio.module.scss
@@ -7,3 +7,7 @@
   line-height: 1.25rem;
   text-align: center;
 }
+
+.slide {
+  height: auto;
+}
