--- a/modules/portfolio/work/work-item.module.scss
+++ b/modules/portfolio/work/work-item.module.scss
@@ -9,6 +9,8 @@
   padding: 1.375rem;
   background: $white;
   row-gap: 1rem;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .project {
